--- a/src/styles/gradient.css
+++ b/src/styles/gradient.css
@@ -17,6 +17,7 @@
 		linear-gradient(#ffffff, #ffffff) 50% 50% / calc(100% - 16px)
 			calc(100% - 10px) no-repeat,
 		linear-gradient(0deg, #ffffff 0%, #5e0691 100%);
+	border-radius: 6px;
 }
 
 .red {
