--- a/src/styles/gradient.css
+++ b/src/styles/gradient.css
@@ -1,25 +1,3 @@
-.border-gradient {
-	background: radial-gradient(
-				circle at 100% 100%,
-				#ffffff 0,
-				#ffffff 1px,
-				transparent 0.5px
-			)
-			0% 0%/8px 8px no-repeat,
-		radial-gradient(circle at 0 100%, #ffffff 0, #ffffff 1px, transparent 1px)
-			100% 0%/8px 8px no-repeat,
-		radial-gradient(circle at 100% 0, #ffffff 0, #ffffff 1px, transparent 1px)
-			0% 100%/8px 8px no-repeat,
-		radial-gradient(circle at 0 0, #ffffff 0, #ffffff 1px, transparent 1px) 100%
-			100%/8px 8px no-repeat,
-		linear-gradient(#ffffff, #ffffff) 50% 50% / calc(100% - 10px)
-			calc(100% - 16px) no-repeat,
-		linear-gradient(#ffffff, #ffffff) 50% 50% / calc(100% - 16px)
-			calc(100% - 10px) no-repeat,
-		linear-gradient(0deg, #ffffff 0%, #5e0691 100%);
-	border-radius: 6px;
-}
-
 .red {
 	background-color: #ff3e2f;
 }
@@ -50,4 +28,33 @@
 		rgba(132, 126, 236, 1) 100%
 	);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#6259e8",endColorstr="#847eec",GradientType=1);
+}
+
+.border-gradient {
+	background: radial-gradient(
+				circle at 100% 100%,
+				#ffffff 0,
+				#ffffff 25px,
+				transparent 25px
+			)
+			0% 0%/30px 30px no-repeat,
+		radial-gradient(circle at 0 100%, #ffffff 0, #ffffff 25px, transparent 25px)
+			100% 0%/30px 30px no-repeat,
+		radial-gradient(circle at 100% 0, #ffffff 0, #ffffff 25px, transparent 25px)
+			0% 100%/30px 30px no-repeat,
+		radial-gradient(circle at 0 0, #ffffff 0, #ffffff 25px, transparent 25px)
+			100% 100%/30px 30px no-repeat,
+		linear-gradient(#ffffff, #ffffff) 50% 50% / calc(100% - 10px)
+			calc(100% - 60px) no-repeat,
+		linear-gradient(#ffffff, #ffffff) 50% 50% / calc(100% - 60px)
+			calc(100% - 10px) no-repeat,
+		linear-gradient(
+			0deg,
+			#ffffff 0%,
+			rgba(123, 94, 146, 1) 65%,
+			rgba(51, 6, 86, 1) 100%
+		);
+	border-radius: 27px;
+	padding: 5px;
+	box-sizing: border-box;
 }
